# BikoDB

./: .gitignore  ARCHITECTURE_CHECKLIST.md  BENCHMARK_COMPARISON.md  Cargo.toml  README.md
.github/workflows/: deploy-docs.yml
crates/bikodb-ai/: Cargo.toml
crates/bikodb-ai/src/: embed_gen.rs  embedding.rs  gnn.rs  hnsw.rs  incremental.rs  inference.rs  lib.rs  vector_idx.rs
crates/bikodb-bench/: Cargo.toml
crates/bikodb-bench/benches/: comparison.rs  graph_bench.rs  ldbc_graphalytics.rs
crates/bikodb-bench/src/: comparison.rs  generators.rs  ldbc.rs  lib.rs
crates/bikodb-cluster/: Cargo.toml
crates/bikodb-cluster/src/: cluster.rs  lib.rs  router.rs  shard.rs  sharded_graph.rs
crates/bikodb-core/: Cargo.toml
crates/bikodb-core/src/: config.rs  error.rs  lib.rs  plugin.rs  record.rs  schema.rs  types.rs  value.rs
crates/bikodb-execution/: Cargo.toml
crates/bikodb-execution/src/: cost.rs  lib.rs  operator.rs  optimizer.rs  pipeline.rs  plan.rs  plan_cache.rs  tracker.rs
crates/bikodb-graph/: Cargo.toml
crates/bikodb-graph/src/: bitset.rs  bulk.rs  community.rs  csr.rs  document.rs  graph.rs  kcore.rs  lcc.rs  lib.rs  louvain.rs  mutation.rs  optimized_dfs.rs  pagerank.rs  parallel_bfs.rs  scc.rs  sssp.rs  transaction.rs  traversal.rs  weighted_csr.rs
crates/bikodb-node/: Cargo.toml
crates/bikodb-node/src/: lib.rs
crates/bikodb-python/: Cargo.toml
crates/bikodb-python/src/: lib.rs
crates/bikodb-query/: Cargo.toml
crates/bikodb-query/src/: cypher.rs  gremlin.rs  lib.rs  sql.rs
crates/bikodb-resource/: Cargo.toml
crates/bikodb-resource/src/: budget.rs  lib.rs  monitor.rs  thread_pool.rs
crates/bikodb-server/: Cargo.toml
crates/bikodb-server/src/: database.rs  http_api.rs  lib.rs  plugin_manager.rs
crates/bikodb-storage/: Cargo.toml
crates/bikodb-storage/src/: bucket.rs  codec.rs  delta.rs  dictionary.rs  lib.rs  mmap.rs  page.rs  page_cache.rs  page_manager.rs  record_serializer.rs  storage_engine.rs  wal.rs
docs/: INDEX.md
