[package]
name = "bikodb-python"
version = "0.1.0"
edition = "2021"
description = "BikoDB — Python bindings via PyO3"

[lib]
name = "bikodb_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
bikodb-core = { path = "../bikodb-core" }
bikodb-server = { path = "../bikodb-server" }
bikodb-graph = { path = "../bikodb-graph" }
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
